fixed mobile menu when too long. added scroll

--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -222,6 +222,7 @@ nav a{
         position: fixed;
         left: 0;
         right: 0;
+        height: calc(100% - 151px);
     }
 
     .sidebar-list.nav-list{
